--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "eslint-plugin-react-hooks": "^4.3.0",
     "jsdom": "^21.1.1",
     "prettier": "^2.8.4",
+    "sass": "^1.59.2",
     "typescript": "^4.9.3",
     "vite": "^4.1.0",
     "vitest": "^0.29.2"
