--- a/package.json
+++ b/package.json
@@ -33,6 +33,10 @@
     "jsdom": "^21.1.1",
     "prettier": "^2.8.4",
     "sass": "^1.59.2",
+    "stylelint": "^15.2.0",
+    "stylelint-config-recommended-scss": "^9.0.1",
+    "stylelint-config-standard-scss": "^7.0.1",
+    "stylelint-scss": "^4.4.0",
     "typescript": "^4.9.3",
     "vite": "^4.1.0",
     "vitest": "^0.29.2"
