--- a/.stylelintrc.json
+++ b/.stylelintrc.json
@@ -2,5 +2,5 @@
   "plugins": [
     "stylelint-scss"
   ],
-  "extends": ["stylelint-config-standard-scss"]
+  "extends": ["stylelint-config-standard-scss", "stylelint-config-recess-order"]
 }
