--- a/.stylelintrc.json
+++ b/.stylelintrc.json
@@ -2,5 +2,8 @@
   "plugins": [
     "stylelint-scss"
   ],
-  "extends": ["stylelint-config-standard-scss", "stylelint-config-recess-order"]
+  "extends": ["stylelint-config-standard-scss", "stylelint-config-recess-order"],
+  "rules": {
+    "declaration-empty-line-before": null
+  }
 }
