--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,6 +20,7 @@
     "vite.config.ts",
     ".eslintrc.cjs",
     "src",
+    "coverage"
   ],
   "references": [{ "path": "./tsconfig.node.json" }]
 }
