--- a/package.json
+++ b/package.json
@@ -12,10 +12,15 @@
     "lint:fix": "eslint . --fix"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^1.9.5",
+    "@types/react-redux": "^7.1.25",
+    "pexels": "^1.4.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-redux": "^8.0.5",
     "react-router-dom": "^6.9.0",
-    "pexels": "^1.4.0"
+    "redux": "^4.2.1",
+    "redux-thunk": "^2.4.2"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^5.16.5",
@@ -38,8 +43,6 @@
     "jsdom": "^21.1.1",
     "json-loader": "^0.5.7",
     "prettier": "^2.8.4",
-    "react-redux": "^8.0.5",
-    "redux": "^4.2.1",
     "sass": "^1.59.2",
     "stylelint": "^15.2.0",
     "stylelint-config-recess-order": "^4.0.0",
